Handle resize in PaintPropertyTreeBuilder::updateForObjectSizeAndLocation()

Also fix a bug exposed by the change: under-invalidation of paint
properties when scrollable contents size changes.

BUG=696811
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2729683002
Cr-Commit-Position: refs/heads/master@{#454348}

Former-commit-id: 666abc33c97400adfa53065f50364d8cbeadd89a